# yew-i18n

./: Cargo.toml  README.md
examples/tailwind/: Cargo.toml  README.md  index.html
examples/tailwind/src/: main.rs  router.rs
examples/tailwind/src/components/: landing.rs
examples/tailwind/src/pages/: landing.rs
src/: lib.rs
