[package]
name = "yew-i18n"
version = "0.1.2"
description = "🌐 Internationalization (i18n) component for the Yew framework."
license = "MIT"
repository = "https://github.com/next-rs/yew-i18n"
homepage = "https://github.com/next-rs/yew-i18n"
documentation = "https://docs.rs/yew-i18n/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"
exclude = ["/examples"]
keywords = ["yew", "rust", "i18n", "yew-i18n"]
categories = ["web-programming", "internationalization", "accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
yew = "0.21.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"

[badges]
maintenance = { status = "actively-developed" }
