[package]
name = "yew-i18n-example"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-i18n = { path = "../" }
serde_json = { version = "1.0.104", default-features = false }
web-sys = { version = "0.3.64", default-features = false }
yew = { version = "0.21.0", features = ["csr"], default-features = false }
yew-router = { version = "0.18.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
